feat: add stage2 backend auth and system skeleton
Co-authored-by: richenyutian <richenyutian@users.noreply.github.com>