@@ -1,5 +1,6 @@
 package com.acme.support.ticket.security;
 
+import com.acme.support.ticket.auth.service.TokenBlacklistService;
 import com.acme.support.ticket.common.constant.SecurityConstants;
 import io.jsonwebtoken.Claims;
 import jakarta.servlet.FilterChain;
@@ -14,22 +15,26 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 /**
  * JWT 认证过滤器。
  * <p>
- * 当前实现以 mock 用户数据为主，适合作为后续接入数据库与 Redis 会话能力的基础骨架。
+ * 当前实现基于 JWT + Redis 黑名单机制。
  * </p>
  */
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtTokenProvider jwtTokenProvider;
+    private final TokenBlacklistService tokenBlacklistService;
 
-    public JwtAuthenticationFilter(JwtTokenProvider jwtTokenProvider) {
+    public JwtAuthenticationFilter(
+            JwtTokenProvider jwtTokenProvider,
+            TokenBlacklistService tokenBlacklistService
+    ) {
         this.jwtTokenProvider = jwtTokenProvider;
+        this.tokenBlacklistService = tokenBlacklistService;
     }
 
     @Override
@@ -44,18 +49,29 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             String token = authHeader.substring(SecurityConstants.TOKEN_PREFIX.length());
 
             try {
+                if (tokenBlacklistService.isBlacklisted(token)) {
+                    SecurityContextHolder.clearContext();
+                    filterChain.doFilter(request, response);
+                    return;
+                }
+
                 Claims claims = jwtTokenProvider.parseToken(token);
                 String username = claims.getSubject();
+                Long userId = claims.get("userId", Long.class);
                 List<String> roles = claims.get("roles", List.class);
+                List<String> permissionCodes = claims.get("authorities", List.class);
 
-                List<SimpleGrantedAuthority> authorities = roles == null
-                        ? Collections.emptyList()
-                        : roles.stream()
-                        .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                        .toList();
+                List<SimpleGrantedAuthority> authorities = buildAuthorities(roles, permissionCodes);
+
+                LoginUserPrincipal principal = new LoginUserPrincipal(
+                        userId,
+                        username,
+                        roles == null ? List.of() : roles,
+                        permissionCodes == null ? List.of() : permissionCodes
+                );
 
                 UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
-                        username,
+                        principal,
                         null,
                         authorities
                 );
@@ -67,5 +83,21 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         }
 
         filterChain.doFilter(request, response);
+    }
+
+    private List<SimpleGrantedAuthority> buildAuthorities(List<String> roles, List<String> permissionCodes) {
+        List<SimpleGrantedAuthority> roleAuthorities = roles == null
+                ? List.of()
+                : roles.stream()
+                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
+                .toList();
+
+        List<SimpleGrantedAuthority> permissionAuthorities = permissionCodes == null
+                ? List.of()
+                : permissionCodes.stream()
+                .map(SimpleGrantedAuthority::new)
+                        .toList();
+
+        return java.util.stream.Stream.concat(roleAuthorities.stream(), permissionAuthorities.stream()).toList();
     }
 }
